<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight=".01"
        android:contentDescription="@string/image_IV"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/texts_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_hint_TV" />

        <TextView
            android:id="@+id/message_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_TV" />
    </LinearLayout>
</LinearLayout>