<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <EditText
        android:id="@+id/password_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/password_hint_ET"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/password_ET"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/login_hint_ET"
        android:textAlignment="center"
        android:textSize="20sp" />


    <Button
        android:id="@+id/login_Btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_ET"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:text="@string/login_Btn" />

    <Button
        android:id="@+id/reg_Button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_Btn"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:text="@string/registration_Btn" />
</RelativeLayout>